<<<<<<< HEAD
[gd_scene load_steps=45 format=3 uid="uid://cfwg16u4t5r01"]
=======
[gd_scene load_steps=38 format=3 uid="uid://cfwg16u4t5r01"]
>>>>>>> 85ee0362c19b06645fbfbfa23fd59280204fcc0e

[ext_resource type="Script" path="res://src/Scripts/Classes/Character/RollbackCharacterController.gd" id="1_d8h7s"]
[ext_resource type="PackedScene" uid="uid://cojs7ish64cv5" path="res://src/Scenes/UI/Billboard/billboard_sprite_3d.tscn" id="2_33ndn"]
[ext_resource type="Texture2D" uid="uid://c78gwvfeiv0v8" path="res://resources/Images/Animations/Ranger/Moves/RangerGNC1.png" id="3_yuvv0"]
[ext_resource type="Texture2D" uid="uid://bpeb0ux7smvj2" path="res://resources/Images/whiteCircle.png" id="10_itfd0"]
[ext_resource type="Texture2D" uid="uid://cwhdc0fkgp4k0" path="res://resources/Images/whiteBlurCircle.png" id="11_3i37i"]
[ext_resource type="Texture2D" uid="uid://bx5ukutk4wum3" path="res://resources/Images/arrow_down.png" id="12_co1d8"]
[ext_resource type="Texture2D" uid="uid://k1d6ljvlbigv" path="res://resources/Images/Animations/Ranger/Basic/RangerIdle1.png" id="13_b1rxa"]
[ext_resource type="PackedScene" uid="uid://du1ce84fu4a65" path="res://src/Scenes/UI/Pause/pause_menu.tscn" id="13_besuu"]
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" id="13_ic8ku"]
[ext_resource type="Texture2D" uid="uid://kfchhnmy5uy0" path="res://resources/Images/Animations/Ranger/Basic/RangerIdle2.png" id="14_0nod3"]
[ext_resource type="PackedScene" uid="uid://dasqrf4pd4bpe" path="res://src/Scenes/Stamina/StanimaBar3D.tscn" id="14_kl2fp"]
<<<<<<< HEAD
[ext_resource type="Script" path="res://src/Scripts/Classes/Character/RollbackHitbox.gd" id="15_foqi0"]
=======
[ext_resource type="PackedScene" uid="uid://dcwy6gxlinend" path="res://src/Scenes/Characters/Character Nodes/SpectatorCooldowns.tscn" id="15_7nmhe"]
>>>>>>> 85ee0362c19b06645fbfbfa23fd59280204fcc0e
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkTimer.gd" id="15_od4bj"]
[ext_resource type="Texture2D" uid="uid://dpw7pb0cm3ah5" path="res://resources/Images/Animations/Ranger/Basic/RangerRun1.png" id="15_trh7c"]
[ext_resource type="Script" path="res://src/Scripts/Classes/Character/Moves/RollbackMoveController.gd" id="16_c5e66"]
[ext_resource type="Texture2D" uid="uid://buh8fvdr6lpji" path="res://resources/Images/Animations/Ranger/Basic/RangerRun2.png" id="16_eyhdg"]
[ext_resource type="Texture2D" uid="uid://c1ygl7tbs6jvj" path="res://resources/Images/Animations/Ranger/Basic/RangerJump.png" id="17_bwlcj"]
[ext_resource type="Script" path="res://src/Scripts/Classes/Character/Moves/ChargableMoves/Test/TestGrab.gd" id="17_iwirs"]
<<<<<<< HEAD
[ext_resource type="Script" path="res://src/Scripts/Classes/Character/Moves/RollbackMove.gd" id="19_xdm2c"]
=======
[ext_resource type="Texture2D" uid="uid://dqdgww1mkqy0w" path="res://resources/Images/Animations/Ranger/Basic/RangerRoll1.png" id="18_gkwkh"]
[ext_resource type="Texture2D" uid="uid://dqmrb10oj7jog" path="res://resources/Images/Animations/Ranger/Basic/RangerRoll2.png" id="19_hfyau"]
[ext_resource type="Texture2D" uid="uid://h7gja44gkn6f" path="res://resources/Images/Animations/Ranger/Basic/RangerRoll3.png" id="20_0mtbd"]
[ext_resource type="Texture2D" uid="uid://bh5ficx1unnk8" path="res://resources/Images/Animations/Ranger/Basic/RangerRoll4.png" id="21_unjw8"]
[ext_resource type="Texture2D" uid="uid://innlwsw6s1s4" path="res://resources/Images/Animations/Ranger/Basic/RangerBlock.png" id="22_qfect"]
[ext_resource type="Texture2D" uid="uid://bayur7dmc0q1y" path="res://resources/Images/Animations/Ranger/Basic/RangerGrab.png" id="23_u2nso"]
>>>>>>> 85ee0362c19b06645fbfbfa23fd59280204fcc0e

[sub_resource type="ViewportTexture" id="ViewportTexture_1yy5m"]
viewport_path = NodePath("BillboardViewport")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sn8c4"]
height = 1.10297

[sub_resource type="ViewportTexture" id="ViewportTexture_5jdb3"]
viewport_path = NodePath("BillboardViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_sm5on"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Animation" id="Animation_w28gn"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("13_b1rxa"), ExtResource("14_0nod3")]
}

[sub_resource type="Animation" id="Animation_hnhue"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_yuvv0"), ExtResource("13_b1rxa")]
}

[sub_resource type="Animation" id="Animation_w0m0c"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("15_trh7c"), ExtResource("16_eyhdg")]
}

[sub_resource type="Animation" id="Animation_8l52l"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("17_bwlcj")]
}

[sub_resource type="Animation" id="Animation_qo61h"]
resource_name = "fall"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("17_bwlcj")]
}

[sub_resource type="Animation" id="Animation_10x3q"]
resource_name = "roll"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("19_hfyau"), ExtResource("20_0mtbd"), ExtResource("21_unjw8"), ExtResource("18_gkwkh")]
}

[sub_resource type="Animation" id="Animation_tuddk"]
resource_name = "block"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("22_qfect")]
}

[sub_resource type="Animation" id="Animation_kxrp2"]
resource_name = "grab"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("23_u2nso")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p8tbk"]
_data = {
"RESET": SubResource("Animation_hnhue"),
"block": SubResource("Animation_tuddk"),
"fall": SubResource("Animation_qo61h"),
"grab": SubResource("Animation_kxrp2"),
"idle": SubResource("Animation_w28gn"),
"jump": SubResource("Animation_8l52l"),
"roll": SubResource("Animation_10x3q"),
"run": SubResource("Animation_w0m0c")
}

<<<<<<< HEAD
[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b6h1n"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s7dfp"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s6sip"]
animation = &"normal_close"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b7dur"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u83ke"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gvbk0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ysa4w"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hq702"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0gub3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lah6g"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_psxqy"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qfppb"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ata2m"]
states/End/position = Vector2(954, 166)
states/Start/position = Vector2(415, 166)
states/idle/node = SubResource("AnimationNodeAnimation_b6h1n")
states/idle/position = Vector2(687, 166)
states/jump/node = SubResource("AnimationNodeAnimation_s7dfp")
states/jump/position = Vector2(707, 62.5233)
states/normal_close/node = SubResource("AnimationNodeAnimation_s6sip")
states/normal_close/position = Vector2(864, 99.4589)
states/run/node = SubResource("AnimationNodeAnimation_b7dur")
states/run/position = Vector2(651, 290.523)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_u83ke"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_gvbk0"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_ysa4w"), "idle", "End", SubResource("AnimationNodeStateMachineTransition_hq702"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_0gub3"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_lah6g"), "idle", "normal_close", SubResource("AnimationNodeStateMachineTransition_psxqy"), "normal_close", "idle", SubResource("AnimationNodeStateMachineTransition_qfppb")]
graph_offset = Vector2(0, -73.4572)

[sub_resource type="ViewportTexture" id="ViewportTexture_5jdb3"]
viewport_path = NodePath("BillboardViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_sm5on"]
viewport_path = NodePath("SubViewport")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sn8c4"]
height = 1.10297

[sub_resource type="BoxMesh" id="BoxMesh_3eisd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g07xf"]

=======
>>>>>>> 85ee0362c19b06645fbfbfa23fd59280204fcc0e
[node name="BaseCharacter" type="CharacterBody3D" groups=["network_sync"]]
collision_layer = 2
platform_floor_layers = 4294967294
script = ExtResource("1_d8h7s")

[node name="DebugInfo" parent="." instance=ExtResource("2_33ndn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.21122, 2.46423)
visible = false
pixel_size = 0.015
texture = SubResource("ViewportTexture_1yy5m")

<<<<<<< HEAD
[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
callback_mode_method = 1
libraries = {
"": SubResource("AnimationLibrary_bchoe")
}
speed_scale = 2.0

=======
>>>>>>> 85ee0362c19b06645fbfbfa23fd59280204fcc0e
[node name="CharacterSprite" type="Sprite3D" parent="."]
transform = Transform3D(0.397235, 0, 0, 0, 0.366733, 0, 0, 0, 0.5, 0, -0.0537091, 0)
billboard = 1
shaded = true
texture = ExtResource("3_yuvv0")

[node name="FloorRing" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00604342, -0.884379, -0.0541416)
size = Vector3(1.75, 0.541, 1.75)
texture_albedo = ExtResource("10_itfd0")
emission_energy = 0.25
modulate = Color(1, 1, 0, 1)
upper_fade = 1e-05
lower_fade = 1e-05
metadata/goal_albedo_mix = 1.0

[node name="FloorShadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00673626, -0.891057, -0.053015)
size = Vector3(2.25, 0.321, 2.25)
texture_albedo = ExtResource("11_3i37i")
emission_energy = 0.1
modulate = Color(0.196078, 0.196078, 0.196078, 1)
upper_fade = 0.0001
lower_fade = 1e-05

[node name="FloorIndicatorRaycast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.46114e-05, -1.09399, 0.000412941)
<<<<<<< HEAD
target_position = Vector3(0, -10, 0)

[node name="AnimationTree" type="AnimationTree" parent="."]
callback_mode_process = 2
libraries = {
"": SubResource("AnimationLibrary_bchoe")
}
tree_root = SubResource("AnimationNodeStateMachine_ata2m")
anim_player = NodePath("../AnimationPlayer")
=======
target_position = Vector3(0, -30, 0)
>>>>>>> 85ee0362c19b06645fbfbfa23fd59280204fcc0e

[node name="PlayerNametag" parent="." instance=ExtResource("2_33ndn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.40802, 0)
pixel_size = 0.02
texture = SubResource("ViewportTexture_5jdb3")

[node name="TargetArrow" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.41769, 0)
visible = false
pixel_size = 0.0002
billboard = 1
texture = ExtResource("12_co1d8")

[node name="PauseLayer" parent="." instance=ExtResource("13_besuu")]
visible = false
script = null

[node name="StaminaBar3D" parent="." instance=ExtResource("14_kl2fp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.93205, 0)
texture = SubResource("ViewportTexture_sm5on")

[node name="Hurtbox" type="CollisionShape3D" parent="." groups=["network_sync"]]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, -0.302027, 0)
shape = SubResource("CapsuleShape3D_sn8c4")

[node name="Axe Uppercut Hitbox" type="Area3D" parent="Hurtbox" node_paths=PackedStringArray("collision_shape", "mesh_instance", "owner_char") groups=["network_sync"]]
transform = Transform3D(0.848528, 0, 0.707107, 0, 0.8, 0, -0.848528, 0, 0.707107, -0.19036, 8.13752e-05, 0.645388)
monitoring = false
script = ExtResource("15_foqi0")
collision_shape = NodePath("CollisionShape3D")
mesh_instance = NodePath("MeshInstance3D")
owner_char = NodePath("../..")
kb_length = 0.1
knockback_strength = Vector3(5, 5, 5)
debug_on = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Hurtbox/Axe Uppercut Hitbox" groups=["network_sync"]]
transform = Transform3D(1.2, 0, 0, 0, 0.8, 0, 0, 0, 1, 0.5, 0, 0.5)
visible = false
mesh = SubResource("BoxMesh_3eisd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox/Axe Uppercut Hitbox" groups=["network_sync"]]
transform = Transform3D(1.2, 0, 0, 0, 0.8, 0, 0, 0, 1, 0.5, 0, 0.5)
shape = SubResource("BoxShape3D_g07xf")

[node name="KnockbackCooldown" type="Node" parent="Hurtbox/Axe Uppercut Hitbox"]
script = ExtResource("15_od4bj")
one_shot = true
wait_ticks = 60

[node name="Cooldowns" type="Node" parent="."]

[node name="BlockInputDebounce" type="Node" parent="Cooldowns"]
script = ExtResource("15_od4bj")
one_shot = true
wait_ticks = 30

[node name="PerfectBlockTimer" type="Node" parent="Cooldowns"]
script = ExtResource("15_od4bj")
one_shot = true
wait_ticks = 15

[node name="RollInputDebounce" type="Node" parent="Cooldowns"]
script = ExtResource("15_od4bj")
one_shot = true
wait_ticks = 30

[node name="MoveController" type="Node" parent="." node_paths=PackedStringArray("ground_nc")]
script = ExtResource("16_c5e66")
ground_nc = NodePath("TestGrab")

[node name="TestGrab" type="Node" parent="MoveController" groups=["network_sync"]]
script = ExtResource("17_iwirs")
move_name = "test_grab"

[node name="GrabCooldownDebounce" type="Node" parent="MoveController/TestGrab"]
script = ExtResource("15_od4bj")
one_shot = true
wait_ticks = 30

<<<<<<< HEAD
[node name="Axe Uppercut" type="Node" parent="MoveController" node_paths=PackedStringArray("hitbox") groups=["network_sync"]]
script = ExtResource("19_xdm2c")
move_input = "ground_sc"
move_type = "MELEE"
move_name = "Axe Uppercut"
hitbox = NodePath("../../Hurtbox/Axe Uppercut Hitbox")

[connection signal="timeout" from="Hurtbox/Axe Uppercut Hitbox/KnockbackCooldown" to="Hurtbox/Axe Uppercut Hitbox" method="_on_knockback_cooldown_timeout"]
=======
[node name="SpectatorCooldowns" parent="." instance=ExtResource("15_7nmhe")]

[node name="NetworkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p8tbk")
}
script = ExtResource("13_ic8ku")

>>>>>>> 85ee0362c19b06645fbfbfa23fd59280204fcc0e
[connection signal="timeout" from="Cooldowns/BlockInputDebounce" to="." method="_on_block_input_debounce_timeout"]
[connection signal="timeout" from="Cooldowns/PerfectBlockTimer" to="." method="_on_perfect_block_timer_timeout"]
[connection signal="timeout" from="Cooldowns/RollInputDebounce" to="." method="_on_roll_input_debounce_timeout"]
[connection signal="timeout" from="MoveController/TestGrab/GrabCooldownDebounce" to="MoveController/TestGrab" method="_on_grab_cooldown_debounce_timeout"]
